// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`jest-supertest project creates expected package.json 1`] = `
"{
  \\"name\\": \\"TestingProject\\",
  \\"version\\": \\"0.1.0\\",
  \\"description\\": \\"Example\\",
  \\"engines\\": {
    \\"node\\": \\"8.9.12\\",
    \\"npm\\": \\"6.4.1\\"
  },
  \\"scripts\\": {
    \\"console\\": \\"node console.js\\",
    \\"cover\\": \\"npm run test --coverage\\",
    \\"test\\": \\"NODE_ENV=testing jest --runInBand --forceExit --detectOpenHandles\\",
    \\"test-inspect\\": \\"NODE_ENV=testing node --inspect --debug-brk jest\\",
    \\"eslint-check\\": \\"eslint --print-config .eslintrc.js --ignore-pattern ./.eslintrc.js | eslint-config-prettier-check\\",
    \\"lint\\": \\"eslint \\\\\\"**/*.js\\\\\\" --ignore-pattern ./.eslintrc.js\\",
    \\"lint-diff\\": \\"git diff --name-only --cached --relative | grep \\\\\\\\\\\\\\\\.js$ | xargs eslint\\",
    \\"lint-fix\\": \\"eslint \\\\\\"**/*.js\\\\\\" --fix --ignore-pattern ./.eslintrc.js\\",
    \\"precommit\\": \\"npm run lint-diff\\",
    \\"outdated\\": \\"npm outdated --depth 0\\",
    \\"pretest\\": \\"npm run lint\\",
    \\"start-dev\\": \\"nodemon --inspect server.js\\",
    \\"prestart-dev\\": \\"npm run lint\\",
    \\"start\\": \\"node server.js\\"
  },
  \\"cacheDirectories\\": [
    \\"node_modules\\"
  ],
  \\"main\\": \\"app.js\\",
  \\"author\\": \\"Wolox\\",
  \\"homepage\\": \\"https://test.com.ar\\",
  \\"license\\": \\"MIT\\",
  \\"repository\\": {
    \\"type\\": \\"git\\",
    \\"url\\": \\"https://test.com.ar.git\\"
  },
  \\"bugs\\": {
    \\"url\\": \\"https://test.com.ar/issues\\",
    \\"email\\": \\"tls@wolox.com.ar\\"
  },
  \\"jest\\": {
    \\"coverageThreshold\\": {
      \\"global\\": {
        \\"branches\\": 80,
        \\"functions\\": 80,
        \\"lines\\": 80,
        \\"statements\\": 80
      }
    },
    \\"collectCoverageFrom\\": [
      \\"**/*.js\\",
      \\"!**/console.js\\",
      \\"!**/node_modules/**\\",
      \\"!**/build/**\\",
      \\"!**/migrations/**\\",
      \\"!**/config/**\\",
      \\"!**/scripts/**\\"
    ],
    \\"setupFilesAfterEnv\\": [
      \\"<rootDir>/test/setup.js\\"
    ],
    \\"testEnvironment\\": \\"node\\",
    \\"transform\\": {
      \\"^.+\\\\\\\\.js$\\": \\"babel-jest\\"
    }
  },
  \\"dependencies\\": {
    \\"bcryptjs\\": \\"^2.4.3\\",
    \\"body-parser\\": \\"^1.19.0\\",
    \\"express\\": \\"^4.17.1\\",
    \\"jwt-simple\\": \\"^0.5.6\\",
    \\"umzug\\": \\"^2.2.0\\",
    \\"express-wolox-logger\\": \\"1.1.0\\",
    \\"swagger-ui-express\\": \\"^4.1.2\\"
  },
  \\"devDependencies\\": {
    \\"babel\\": \\"6.23.0\\",
    \\"babel-core\\": \\"6.26.3\\",
    \\"babel-eslint\\": \\"^10.0.3\\",
    \\"babel-jest\\": \\"^24.9.0\\",
    \\"jest\\": \\"^24.9.0\\",
    \\"supertest\\": \\"^4.0.2\\",
    \\"babel-preset-es2015\\": \\"6.24.1\\",
    \\"dotenv\\": \\"^8.1.0\\",
    \\"eslint\\": \\"^6.5.1\\",
    \\"eslint-plugin-import\\": \\"^2.18.2\\",
    \\"eslint-plugin-prettier\\": \\"^3.1.1\\",
    \\"husky\\": \\"^3.0.8\\",
    \\"istanbul\\": \\"^0.4.3\\",
    \\"mocha\\": \\"^6.2.1\\",
    \\"mocha-lcov-reporter\\": \\"^1.3.0\\",
    \\"nodemon\\": \\"^1.19.3\\",
    \\"prettier\\": \\"^1.18.2\\",
    \\"prettier-eslint\\": \\"^9.0.0\\",
    \\"prompt\\": \\"^1.0.0\\",
    \\"eslint-config-wolox\\": \\"^3.0.2\\",
    \\"eslint-config-wolox-node\\": \\"^2.2.0\\"
  }
}
"
`;

exports[`mocha-chai project creates expected package.json 1`] = `
"{
  \\"name\\": \\"TestingProject\\",
  \\"version\\": \\"0.1.0\\",
  \\"description\\": \\"Example\\",
  \\"engines\\": {
    \\"node\\": \\"8.9.12\\",
    \\"npm\\": \\"6.4.1\\"
  },
  \\"scripts\\": {
    \\"console\\": \\"node console.js\\",
    \\"cover\\": \\"NODE_ENV=testing istanbul cover ./node_modules/mocha/bin/_mocha  test/app.spec.js\\",
    \\"test\\": \\"NODE_ENV=testing ./node_modules/mocha/bin/_mocha --timeout 6000 --exit test/app.spec.js\\",
    \\"test-inspect\\": \\"NODE_ENV=testing node --inspect --debug-brk ./node_modules/mocha/bin/_mocha test/app.spec.js\\",
    \\"eslint-check\\": \\"eslint --print-config .eslintrc.js --ignore-pattern ./.eslintrc.js | eslint-config-prettier-check\\",
    \\"lint\\": \\"eslint \\\\\\"**/*.js\\\\\\" --ignore-pattern ./.eslintrc.js\\",
    \\"lint-diff\\": \\"git diff --name-only --cached --relative | grep \\\\\\\\\\\\\\\\.js$ | xargs eslint\\",
    \\"lint-fix\\": \\"eslint \\\\\\"**/*.js\\\\\\" --fix --ignore-pattern ./.eslintrc.js\\",
    \\"precommit\\": \\"npm run lint-diff\\",
    \\"outdated\\": \\"npm outdated --depth 0\\",
    \\"pretest\\": \\"npm run lint\\",
    \\"start-dev\\": \\"nodemon --inspect server.js\\",
    \\"prestart-dev\\": \\"npm run lint\\",
    \\"start\\": \\"node server.js\\"
  },
  \\"cacheDirectories\\": [
    \\"node_modules\\"
  ],
  \\"main\\": \\"app.js\\",
  \\"author\\": \\"Wolox\\",
  \\"homepage\\": \\"https://test.com.ar\\",
  \\"license\\": \\"MIT\\",
  \\"repository\\": {
    \\"type\\": \\"git\\",
    \\"url\\": \\"https://test.com.ar.git\\"
  },
  \\"bugs\\": {
    \\"url\\": \\"https://test.com.ar/issues\\",
    \\"email\\": \\"tls@wolox.com.ar\\"
  },
  \\"dependencies\\": {
    \\"bcryptjs\\": \\"^2.4.3\\",
    \\"body-parser\\": \\"^1.19.0\\",
    \\"express\\": \\"^4.17.1\\",
    \\"jwt-simple\\": \\"^0.5.6\\",
    \\"umzug\\": \\"^2.2.0\\",
    \\"express-wolox-logger\\": \\"1.1.0\\",
    \\"swagger-ui-express\\": \\"^4.1.2\\"
  },
  \\"devDependencies\\": {
    \\"babel\\": \\"6.23.0\\",
    \\"babel-core\\": \\"6.26.3\\",
    \\"babel-eslint\\": \\"^10.0.3\\",
    \\"babel-preset-es2015\\": \\"6.24.1\\",
    \\"chai\\": \\"^4.2.0\\",
    \\"chai-http\\": \\"^4.3.0\\",
    \\"dotenv\\": \\"^8.1.0\\",
    \\"eslint\\": \\"^6.5.1\\",
    \\"eslint-plugin-import\\": \\"^2.18.2\\",
    \\"eslint-plugin-prettier\\": \\"^3.1.1\\",
    \\"husky\\": \\"^3.0.8\\",
    \\"istanbul\\": \\"^0.4.3\\",
    \\"mocha\\": \\"^6.2.1\\",
    \\"mocha-lcov-reporter\\": \\"^1.3.0\\",
    \\"nodemon\\": \\"^1.19.3\\",
    \\"prettier\\": \\"^1.18.2\\",
    \\"prettier-eslint\\": \\"^9.0.0\\",
    \\"prompt\\": \\"^1.0.0\\",
    \\"eslint-config-wolox\\": \\"^3.0.2\\",
    \\"eslint-config-wolox-node\\": \\"^2.2.0\\"
  }
}
"
`;
